[gd_scene load_steps=4 format=3 uid="uid://cikrledscemgn"]

[ext_resource type="Script" uid="uid://cm3ikob5f6gkf" path="res://scenes/MatchmakingDialog.gd" id="1_l0d6v"]
[ext_resource type="Script" uid="uid://dxvwduy8g64e6" path="res://scenes/WebSocketClient.gd" id="2_xoo1e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0d6v"]

[node name="MatchmakingDialog" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l0d6v")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l0d6v")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 17

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Seek Challenger"
horizontal_alignment = 1

[node name="RandomMatch" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Let Fate Decide"

[node name="CreateArena" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Create Arena"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="JoinArena" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Join Arena"

[node name="ArenaId" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Arena Id..."

[node name="Close" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Close"

[node name="MatchmakingPlaceholder" type="Node" parent="."]

[node name="WebsocketClient" type="Node" parent="."]
script = ExtResource("2_xoo1e")

[connection signal="pressed" from="Panel/VBoxContainer/RandomMatch" to="." method="_on_random_match_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/CreateArena" to="." method="_on_create_arena_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/JoinArena" to="." method="_on_join_arena_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Close" to="." method="_on_close_pressed"]
